modules/grammars/tool/src/test/resources/cocos/valid/RequiredAttributes.td
package valid;

tool RequiredAttributes {
    attribute path = "some/awesome/path";

    resource SOME_RESOURCE {
        attribute path = "some/other/awesome/path";
    }
}
