modules/grammars/tool/src/test/resources/cocos/invalid/RequiredAttributes.td
package invalid;

tool RequiredAttributes {
    resource SOME_RESOURCE {
    }
}
